# copilot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml
src/: hooks.rs  main.rs  manifest.rs  renderer.rs  template_loader.rs  util.rs  vcs.rs
templates/copilot_sample_template/: copilot.json
templates/copilot_sample_template/hooks/: post_gen_project.lua  pre_gen_project.lua  pre_prompt.lua
templates/copilot_sample_template/{{ project_slug }}/: README.md  base.txt  child.txt  main.txt
templates/copilot_sample_template/{{ project_slug }}/tests/: Interation.txt
