[package]
name = "copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
minijinja = { version = "2.12.0", default-features = false, features = ["builtins", "loader", "serde"] }
dialoguer = "0.12.0"
tempfile = "3.23.0"
walkdir = "2.5"
anyhow = "1.0.100"
serde_json = "1.0.145"
serde = "1.0.228"
mlua = { version = "0.11.4", default-features = false, features = ["lua54", "vendored", "send"] }

[dev-dependencies]
assert_cmd = "2.0"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = "fat"